CKA_COURSE/29_Ingress/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: example-ingress
spec:
  ingressClassName: nginx
  rules:   
  - http:
      paths:
        - path: /wear
          pathType: Prefix
          backend:
            service:
              name: wear-service
              port:
                number: 8080
        - path: /watch
          pathType: Prefix
          backend:
            service:
              name: video-service
              port:
                number: 8080
